--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-toastify": "^0.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
